# trigger-models

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: linter.yml  test.yml
trigger_models/: __init__.py  enum.py  model.py  template.py
trigger_models/enum/: __init__.py
trigger_models/model/: __init__.py  model.py
trigger_models/template/: __init__.py  template.py
